@@ -11,6 +11,10 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-31
+2015-02-12 Mikhail S. Dubrovin	
+- GeometryObject - add method get_geo_pars (PSAS-11)
+	
 Tag: V00-02-30
 2015-01-23 Mikhail S. Dubrovin	
 - GeometryObject.det_shape(...) - comment print for debugging
